<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">English Muffin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="english_muffin">English Muffin</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="phrases">Phrases</string>
    <string name="muffin_icon">muffin_icon</string>
    <string name="muffin">Muffin</string>
    <string name="welcome_to">Welcome to</string>
    <string name="by_njcu_team">By NJCU Team</string>
    <string name="voice">Speak</string>
    <string name="firstWord">Large Text</string>
    <string name="meaning1">TextView</string>
    <string name="title_activity_menu_vocab">MenuVocab</string>

</resources>
