<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/firstWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/voice"
        android:layout_marginTop="44dp"
        android:text="@string/firstWord"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/meaning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/meaning1" />

    <Button
        android:id="@+id/voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/meaning1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/voice" />

</RelativeLayout>